--- a/server/prisma/prisma.yml
+++ b/server/prisma/prisma.yml
@@ -1,6 +1,10 @@
 # Specifies the HTTP endpoint of your Prisma API.
 #endpoint: ''
-endpoint: https://eu1.prisma.sh/harsh-manwani/hackernews-invoker/dev
+#endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: https://stumble-upon-9ae0975bea.herokuapp.com/stumble-upon/prod
+#endpoint: https://stumble-upon-9ae0975bea.herokuapp.com/stumble-upon/prod
+#endpoint: https://stumble-upon-9ae0975bea.herokuapp.com/stumble-upon/prod
+endpoint: https://stumble-upon-9ae0975bea.herokuapp.com/stumble-upon/prod
 
 # Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
